--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Mar 23 12:05:01 BDT 2015
-sdk.dir=E\:\\ovi\\android_all\\android-sdk\\android-sdk
+#Mon Mar 23 13:09:10 BDT 2015
+sdk.dir=C\:\\Users\\Tasvir\\AppData\\Local\\Android\\sdk
