--- a/schoolApp/src/main/AndroidManifest.xml
+++ b/schoolApp/src/main/AndroidManifest.xml
@@ -393,6 +393,12 @@
             android:screenOrientation="portrait">
 
         </activity>
+
+        <activity
+            android:name="com.champs21.freeversion.LessonPlanSubjectDetailsActivity"
+            android:screenOrientation="portrait">
+
+        </activity>
         
 
 
