--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,13 @@ Thumbs.db
 # gradle directory
 .gradle
 build/
+aFileChooser/build
+facebookSDK/build
+flowTextView/build
+pullToRefreshLibrary/build/
+schoolApp/build
+simpleFacebook/build
+
 
 #for oh-my-zsh jira plugin (https://github.com/robbyrussell/oh-my-zsh/wiki/Plugins#jira)
 .jira-url
