1. Added xml parser associated classes. 2. Added a test activity i.e SpellingbeeTestActivity.java and associated menifest modification. 3. Push notification for free version bug is fixed now.

--- a/schoolApp/src/main/AndroidManifest.xml
+++ b/schoolApp/src/main/AndroidManifest.xml
@@ -399,6 +399,13 @@
             android:screenOrientation="portrait">
 
         </activity>
+
+
+        <activity
+            android:name="com.champs21.spellingbee.SpellingbeeTestActivity"
+            android:screenOrientation="portrait">
+
+        </activity>
         
 
 
