1. Added new package spellingbee and associated all classes, layouts, drawables, asset folder xml data etc. 2. The spelling bee game consists of mainly four pages main game page, result page, leader board page and rules page. All these pages are added in this version.

--- a/schoolApp/src/main/AndroidManifest.xml
+++ b/schoolApp/src/main/AndroidManifest.xml
@@ -403,11 +403,34 @@
 
         <activity
             android:name="com.champs21.spellingbee.SpellingbeeTestActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden">
+
+        </activity>
+
+        <activity
+            android:name="com.champs21.spellingbee.ResultPageActivity"
             android:screenOrientation="portrait">
 
         </activity>
-        
 
+        <activity
+            android:name="com.champs21.spellingbee.LeaderBoardActivity"
+            android:screenOrientation="portrait">
+
+        </activity>
+
+        <activity
+            android:name="com.champs21.spellingbee.AndroidFacebookConnectActivity"
+            android:screenOrientation="portrait">
+
+        </activity>
+
+        <activity
+            android:name="com.champs21.spellingbee.SpellingbeeRulesActivity"
+            android:screenOrientation="portrait">
+
+        </activity>
 
     </application>
 
