--- a/schoolApp/src/main/AndroidManifest.xml
+++ b/schoolApp/src/main/AndroidManifest.xml
@@ -404,7 +404,7 @@
         <activity
             android:name="com.champs21.spellingbee.SpellingbeeTestActivity"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateHidden">
+            android:windowSoftInputMode="stateAlwaysVisible">
 
         </activity>
 
@@ -431,6 +431,8 @@
             android:screenOrientation="portrait">
 
         </activity>
+
+
 
     </application>
 
