1. Adedd bloop iamge drawables and associated layouts. 2. Some bugs are fixed in ReminderHelper.java, SingleNoticeActivity.java GcmIntentService.java and other spelling bee related sectors.

--- a/schoolApp/src/main/AndroidManifest.xml
+++ b/schoolApp/src/main/AndroidManifest.xml
@@ -439,6 +439,9 @@
             android:exported="true"/>
 
 
+        <meta-data
+            android:name="io.fabric.ApiKey"
+            android:value="64b7d5b86f3c2225536b2173e0e3ad9fabb5a1bb" />
     </application>
 
 </manifest>
