--- a/schoolApp/src/main/AndroidManifest.xml
+++ b/schoolApp/src/main/AndroidManifest.xml
@@ -433,6 +433,11 @@
             android:screenOrientation="portrait">
 
         </activity>
+        <activity
+            android:name="com.champs21.schoolapp.classtune.ClassTuneRegistrationActivity"
+            android:screenOrientation="portrait">
+
+        </activity>
 
         <provider android:authorities="com.facebook.app.NativeAppCallContentProvider850059515022967"
             android:name="com.facebook.NativeAppCallContentProvider"
