1. New actionbar layout actionbar_view_classtune.xml for the activity RegistrationFirstPhaseActivity.java 2. Added associated drawables and layouts.

--- a/schoolApp/src/main/AndroidManifest.xml
+++ b/schoolApp/src/main/AndroidManifest.xml
@@ -441,7 +441,8 @@
 
         <activity
             android:name="com.champs21.schoolapp.classtune.RegistrationFirstPhaseActivity"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize">
         </activity>
 
         <activity
