--- a/schoolApp/src/main/AndroidManifest.xml
+++ b/schoolApp/src/main/AndroidManifest.xml
@@ -441,8 +441,7 @@
 
         <activity
             android:name="com.champs21.schoolapp.classtune.RegistrationFirstPhaseActivity"
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustResize">
+            android:screenOrientation="portrait">
         </activity>
 
         <activity
